; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_reliable.c_reliable_pid_in_range1.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_reliable.c_reliable_pid_in_range1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i32)* @reliable_pid_in_range1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reliable_pid_in_range1(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %8 = load i64, i64* %5, align 8
  %9 = load i64, i64* %6, align 8
  %10 = icmp sge i64 %8, %9
  br i1 %10, label %11, label %20

11:                                               ; preds = %3
  %12 = load i64, i64* %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = sub nsw i64 %12, %13
  %15 = load i32, i32* %7, align 4
  %16 = zext i32 %15 to i64
  %17 = icmp slt i64 %14, %16
  br i1 %17, label %18, label %19

18:                                               ; preds = %11
  store i32 1, i32* %4, align 4
  br label %32

19:                                               ; preds = %11
  br label %31

20:                                               ; preds = %3
  %21 = load i64, i64* %5, align 8
  %22 = add nsw i64 %21, 2147483648
  %23 = load i64, i64* %6, align 8
  %24 = add nsw i64 %23, 2147483648
  %25 = sub nsw i64 %22, %24
  %26 = load i32, i32* %7, align 4
  %27 = zext i32 %26 to i64
  %28 = icmp slt i64 %25, %27
  br i1 %28, label %29, label %30

29:                                               ; preds = %20
  store i32 1, i32* %4, align 4
  br label %32

30:                                               ; preds = %20
  br label %31

31:                                               ; preds = %30, %19
  store i32 0, i32* %4, align 4
  br label %32

32:                                               ; preds = %31, %29, %18
  %33 = load i32, i32* %4, align 4
  ret i32 %33
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
